<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.ulille.commons</groupId>
	<artifactId>base</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
  	<name>Commons</name>
  	<inceptionYear>2015</inceptionYear>

  	<issueManagement>
    	<system>GitHub</system>
    	<url>https://github.com/seintur/commons/issues</url>
  	</issueManagement>

  	<developers>
    	<developer>
      		<name>Lionel Seinturier</name>
      		<roles><role>developer</role></roles>
    	</developer>
  	</developers>

	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  	</properties>
  	
  	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
  	</dependencies>
    
    <build>
	    <plugins>
	    
    		<plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-compiler-plugin</artifactId>
        		<version>3.1</version>
        		<configuration>
          			<source>1.8</source>
          			<target>1.8</target>
	        	</configuration>
    		</plugin>
    		
    		<plugin>
    		<groupId>org.jacoco</groupId>
    		<artifactId>jacoco-maven-plugin</artifactId>
    		<version>0.7.5.201505241946</version>
    		<executions>
				<execution>
            		<id>prepare-agent</id>
            		<goals>
                		<goal>prepare-agent</goal>
            		</goals>
        		</execution>
    			</executions>
			</plugin>

			<plugin>
    			<groupId>org.eluder.coveralls</groupId>
    			<artifactId>coveralls-maven-plugin</artifactId>
    			<version>4.1.0</version>
			</plugin>

		</plugins>
	</build>

</project>
